--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,10 +54,10 @@ $color-institucional: #ff8f00
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
+$color-primario: #252CA1
+$color-secundario: #87F9FF
+$color-acento-contenido: #8C6DF2
+$color-acento-botones: #FFB74D
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -181,7 +181,7 @@ $bp-max-xs: 576px
 // -----------------------------------------------------
   
 // Imágen banner principal -----------------------------
-$banner-principal-img-y: '' // 'arriba','abajo',''
+$banner-principal-img-y: 'abajo' // 'arriba','abajo',''
 $banner-principal-img-x: '' // 'derecha',''
 
 // .tarjeta-avatar -----------------------------------
